参数可配置

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+OAUTH_CLIENT_ID=1
+OAUTH_CLIENT_SECRET=project_pc_aaa
+OAUTH_REDIRECT_URI=http://127.0.0.1:8000/callback
+OAUTH_URL_AUTHORIZE=http://127.0.0.1:9501/authorize
+OAUTH_URL_ACCESSTOKEN=http://127.0.0.1:9501/access_token
+OAUTH_URL_RESOURCE_OWNER_DETAILS=http://127.0.0.1:9501/oauth2/lockdin/resource
