--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "league/oauth2-client": "^2.4"
+        "league/oauth2-client": "^2.4",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
