--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "ext-json": "*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "league/oauth2-client": "^2.4",
-      "ext-json": "*"
+        "league/oauth2-client": "^2.4"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
